[package]
name = "grrs"
version = "0.1.0"
authors = ["Gee Gee <geegee4iee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
user32-sys = "0.2.0"
winapi = { version = "0.3.9", features = ["winnt", "processthreadsapi", "libloaderapi", "winbase"] }